[package]
name = "clap_conf"
version = "0.2.0"
authors = ["storyfeet <thebeaky@psmail.net>"]
edition = "2018"
keywords = ["Command","Line","Arguments","Environment","config"]
license = "MIT"
repository = "https://github.com/storyfeet/clap_conf"
description = "A library to unify commandline arguments with config files and environment variables. And make it easier for users to tell your program how to behave across the three main input sources"
readme = "readme.md"

[dependencies]
clap = "2.33.0"
serde = "1.0.90"
toml = "0.5.0"
anyhow = "1.0.31"
thiserror="1.0.17"
